fixed padding on mobile

--- a/style.css
+++ b/style.css
@@ -38,7 +38,6 @@ p, li, a {
 
 p, li {
     padding: 0px 100px 0 100px;
-    text-align: center;
     line-height: 1.5;
 }
 
